Make main banner resize more nicely

--- a/resources/style/org.scss
+++ b/resources/style/org.scss
@@ -575,6 +575,10 @@ div.banner {
         max-width: 1000px;
         margin: auto;
         line-height: 1.4;
+        @media(min-width:1600px) and (max-width:2000px){
+            width: 35vw;
+            font-size: 0.8em;
+        }
     }
     &.large {
         padding: 50px 5px 80px 5px;
