--- a/resources/style/org.css
+++ b/resources/style/org.css
@@ -503,6 +503,10 @@ div.banner {
     max-width: 1000px;
     margin: auto;
     line-height: 1.4; }
+    @media (min-width: 1600px) and (max-width: 2000px) {
+      div.banner p {
+        width: 35vw;
+        font-size: 0.8em; } }
   div.banner.large {
     padding: 50px 5px 80px 5px;
     background-color: var(--green); }
