--- a/resources/style/org.scss
+++ b/resources/style/org.scss
@@ -639,3 +639,17 @@ h2[id]:target {
     font-family: var(--sans);
     color: var(--dark-green);
 }
+
+// when viewieng src
+#src {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow-y: auto;
+    padding-top: calc(2.3rem + 16px);
+    @media(max-width:850px) {
+        padding-top: calc(1.4rem + 16px);
+    }
+}
