Remove box shadow from images

--- a/resources/style/org.css
+++ b/resources/style/org.css
@@ -130,8 +130,6 @@ h2 {
   max-width: 55em; }
 
 *.outline-2 img {
-  box-shadow: 5px 5px 5px #aaa;
-  /* margin-top: -35px; */
   margin-left: 50px;
   max-width: 80%; }
 
@@ -539,8 +537,7 @@ div.banner {
 
 img.inline {
   height: 1em;
-  margin-bottom: -0.2em;
-  box-shadow: none; }
+  margin-bottom: -0.2em; }
 
 #a-quote {
   font-style: italic;
