--- a/resources/style/org.scss
+++ b/resources/style/org.scss
@@ -102,8 +102,9 @@ a:hover {
 
 #content {
     font-size: 1.2em;
-    margin-left: 130px;
     line-height: 2em;
+    max-width: 60rem;
+    margin: auto;
 }
 
 #content p {
@@ -146,8 +147,7 @@ h2 {
     font-size: 1em;
     line-height: 1.3em;
     margin-top: 40px;
-    margin-left: -130px;
-    max-width: 55em;
+    width: 100%;
 }
 
 *.outline-2 img {
@@ -401,7 +401,7 @@ body {
     margin-left: var(--body-left);
     margin-right: var(--body-right);
     padding: var(--body-padding);
-    padding-top: 0;
+    // padding-top: 0;
 }
 
 nav#main {
@@ -531,7 +531,7 @@ nav + div.banner.large {
 }
 
 div.banner {
-    margin-left: calc(-130px - var(--body-left) - var(--body-padding));
+    margin-left: #{"min(calc(0px - var(--body-left) - var(--body-padding)), calc(30rem - 50vw - 0.5*var(--body-left) + 0.5*var(--body-right)))"};
     width: 100vw;
     padding: 20px 5px 10px 5px;
     text-align: center;
