--- a/resources/style/org.scss
+++ b/resources/style/org.scss
@@ -647,10 +647,9 @@ h2[id]:target {
     justify-content: center;
     max-width: none;
     width: 100%;
-    margin-top: -1rem;
+    margin-top: 0;
     position: relative;
     &.no-heading {
-    margin-top: -4rem;
         h2 {
             display: none;
         }
@@ -658,13 +657,14 @@ h2[id]:target {
     h2 {
         position: absolute;
         left: 0;
+        top: -1.2em;
     }
     .outline-3 {
         background: none;
         border: none;
         text-align: center;
-        width: 20rem;
-        min-height: 15rem;
+        width: 18rem;
+        min-height: 10rem;
         a {
             display: block;
             text-decoration: none;
@@ -684,7 +684,8 @@ h2[id]:target {
         h3 {
             display: block;
             position: relative;
-            top: 10rem;
+            top: 6.5rem;
+            margin-bottom: -2.5rem;
             pointer-events: none;
         }
     }
