--- a/resources/style/org.scss
+++ b/resources/style/org.scss
@@ -117,6 +117,7 @@ h1.title {
 
 h3 {
     display: none;
+    font-size: 1.4em;
 }
 
 .outline-3 {
@@ -401,7 +402,7 @@ body {
     margin-left: var(--body-left);
     margin-right: var(--body-right);
     padding: var(--body-padding);
-    // padding-top: 0;
+    padding-top: 0;
 }
 
 nav#main {
@@ -639,6 +640,10 @@ h2[id]:target {
     margin-top: 5rem;
     font-family: var(--sans);
     color: var(--dark-green);
+}
+
+.inline {
+    display: inline-block;
 }
 
 .columns {
