--- a/resources/style/org.scss
+++ b/resources/style/org.scss
@@ -627,6 +627,12 @@ div.banner {
             @media(max-width:850px) {
                 max-height: 10rem;
             }
+            &[src="/resources/img/org-mode-unicorn.svg"] { // when we know the image, we can avoid page reflows on load
+                width: 18.125rem;
+                @media(max-width:850px) {
+                    max-width: 9.0625rem;
+                }
+            }
             margin-bottom: -0.5em;
         }
         h2 {
