--- a/resources/style/org.scss
+++ b/resources/style/org.scss
@@ -668,6 +668,15 @@ div.banner {
             font-size: 0.8em;
         }
     }
+    p.bubble {
+        font-family: var(--sans);
+        background: #fffa;
+        margin-top: 1em;
+        border-radius: 2em;
+        padding: 0.1em 0 0.25em 0;
+        font-size: 80%;
+        width: 90%;
+    }
     &.large {
         padding: 50px 5px 80px 5px;
         background-color: var(--green);
