--- a/resources/style/org.css
+++ b/resources/style/org.css
@@ -591,9 +591,12 @@ div.banner {
     background: #fffa;
     margin-top: 1em;
     border-radius: 2em;
-    padding: 0.1em 0 0.25em 0;
-    font-size: 80%;
+    padding: 0.3em 1em;
+    font-size: 1.2rem;
     width: 90%; }
+    @media (min-width: 1600px) and (max-width: 2000px) {
+      div.banner p.bubble {
+        font-size: 0.96rem; } }
   div.banner.large {
     padding: 50px 5px 80px 5px;
     background-color: var(--green); }
@@ -625,7 +628,7 @@ div.banner {
 
 img.inline {
   height: 1em;
-  margin-bottom: -0.2em; }
+  margin-bottom: -0.15em; }
 
 #a-quote {
   font-style: italic;
