--- a/resources/style/org.css
+++ b/resources/style/org.css
@@ -354,6 +354,9 @@ dt {
 .outline-text-2 > .move {
   top: -30px; }
 
+p.date {
+  display: none; }
+
 div.side-fig {
   max-width: 1600px;
   margin: auto;
@@ -407,7 +410,6 @@ div.side-fig {
       div.side-fig > div.outline-3 > div.outline-4 h4 {
         display: none; }
 
-/* new content */
 :root {
   --sans: -apple-system, BlinkMacSystemFont, San Francisco, Helvetica Neue, Helvetica, Ubuntu, Roboto, Noto, Segoe UI, Arial, sans-serif;
   --body-left: 0px;
@@ -636,11 +638,6 @@ img.inline {
 
 h2[id]:target {
   padding-top: calc(40px + 2rem); }
-
-.date {
-  margin-top: 5rem;
-  font-family: var(--sans);
-  color: var(--dark-green); }
 
 .inline {
   display: inline-block; }
