--- a/resources/style/org.scss
+++ b/resources/style/org.scss
@@ -626,74 +626,8 @@ div.banner {
         flex-basis: 100%;
         max-width: none;
     }
-    .title {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        img {
-            height: 20rem;
-            @media(max-width:850px) {
-                max-height: 10rem;
-            }
-            &[src="/resources/img/org-mode-unicorn.svg"] { // when we know the image, we can avoid page reflows on load
-                width: 18.125rem;
-                @media(max-width:850px) {
-                    max-width: 9.0625rem;
-                }
-            }
-            margin-bottom: -0.5em;
-        }
-        h2 {
-            color: #eee;
-            font-family: var(--sans);
-            font-size: 3em;
-            @media(max-width:850px) {
-                font-size: 2em;
-            }
-            text-align: left;
-            line-height: 1.2;
-            margin-left: 0.2em;
-            p.subtitle {
-                color: #222;
-                font-size: 0.5em;
-                max-width: 15em;
-                text-align: left;
-            }
-        }
-    }
-    p {
-        max-width: 1000px;
-        margin: auto;
-        line-height: 1.4;
-        @media(min-width:1400px) and (max-width:2000px){
-            width: 35vw;
-            font-size: 0.8em;
-        }
-    }
-    p.bubble {
-        font-family: var(--sans);
-        background: #fffa;
-        margin-top: 1em;
-        border-radius: 2em;
-        padding: 0.3em 1em;
-        font-size: 1.2rem;
-        width: 90%;
-        @media(min-width:1400px) and (max-width:2000px){
-            font-size: 0.96rem;
-        }
-    }
-    &.large {
-        padding: 50px 5px 80px 5px;
-        background-color: var(--green);
-        @media(min-width:850px) {
-            font-size: 2rem;
-        }
-        @media(max-width:850px) {
-            padding-top: 10px;
-        }
-    }
     &.slim {
-        padding: 5px;
+        padding: 0.8rem 1rem;
         font-size: 1.2rem;
         font-family: var(--sans);
     }
@@ -707,7 +641,7 @@ div.banner {
         }
     }
     &.green {
-        background-color: var(--dark-green);
+        background-color: var(--green);
         color: #eee;
         a {
             color: #fff;
