Increase 2nd level font size by 17%

--- a/resources/style/org.scss
+++ b/resources/style/org.scss
@@ -126,7 +126,7 @@ h3 {
     padding: 5pt;
     width: 27em;
     max-width: 80%;
-    font-size: 85%;
+    font-size: 1em;
     margin-top: 20pt;
 }
 
