Switch to a light Hero style (Style variant A)

--- a/resources/style/index.css
+++ b/resources/style/index.css
@@ -1,6 +1,5 @@
 div.banner.hero {
-  background-color: var(--dark-green);
-  color: #eee;
+  background-color: #fff;
   text-align: left;
   justify-content: center;
   padding: 5rem 1rem 3rem 1rem; }
@@ -34,8 +33,8 @@ div.banner.hero {
 
 div.banner p.bubble {
   font-family: var(--sans);
-  border: 1px solid #fff;
   color: inherit;
+  border: 1px solid currentColor;
   margin-top: 2em;
   border-radius: 2em;
   padding: 0.3em 1em;
@@ -44,5 +43,3 @@ div.banner p.bubble {
   text-align: center; }
   div.banner p.bubble a {
     color: inherit; }
-  div.banner p.bubble img.inline {
-    filter: brightness(100); }
