--- a/resources/style/org.css
+++ b/resources/style/org.css
@@ -562,10 +562,9 @@ div.banner {
       display: inline-block;
       margin: 0.2em; }
   div.banner.green {
-    background-color: var(--green);
-    color: #eee; }
+    background-color: #eaeaea; }
     div.banner.green a {
-      color: #fff;
+      color: #000;
       font-weight: bold; }
   div.banner p.small {
     font-size: 0.7em; }
@@ -613,14 +612,14 @@ h2[id]:target {
     .columns .outline-3 .org-svg, .columns .outline-3 img {
       width: auto;
       margin-left: 0;
-      height: 8.5rem;
+      height: 9rem;
       max-width: 80%;
-      padding-bottom: 2rem;
+      padding-bottom: 2.5rem;
       pointer-events: none; }
     .columns .outline-3 h3 {
       display: block;
       position: relative;
-      top: 6.5rem;
+      top: 7rem;
       margin-bottom: -2.5rem;
       pointer-events: none; }
 
